modified:   app.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Serial Javascript</h1>
   <div class="led"></div>
-  <p class="dato">estado</p>
- <script src="app.js" ></script> 
+  <p class="dato" id="dato">estado</p>
+ <script src="app.js" defer></script> 
 </body>
 </html>
